assets/css/index.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  background-color: black;
  font-family: "VT323", monospace;
  color: antiquewhite;
}

.initial-window-container {
  width: 100vw;
  height: 100%;
  background-color: black;
  position: absolute;
  z-index: 100;
}

.match-messages {
  height: 5rem;
  width: 100vw;
  /* background-color: indianred; */
  position: absolute;
  top: 50%;
  text-align: center;
}

.match-messages img {
  height: 3rem;
}

.game-table {
  background-image: url("../items/green-table.jpg");
  /* background-color: steelblue; */
  height: calc(var(--vh, 1vh) * 100);
  /* height: 30rem; */
  margin: 0 auto;
  max-width: 50rem;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.game-section {
  /* background-color: tomato; */
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.initial-window {
  /* background-color: tomato; */
  /* background-image: url("../items/blackjack_title.png");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover; */
  height: 100%;
  margin: 0 auto;
  max-width: 50rem;
}

.initial-elements {
  background-image: url("../items/blackjack_title.png");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  height: 100%;
  margin: 0 auto;
  max-width: 50rem;
}

footer {
  width: 100%;
  display: flex;
  justify-content: center;
  margin-bottom: 0.2rem;
}

.bet-section {
  /* background-color: tomato; */
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  left: 0;
  height: 14rem;
  margin-left: auto;
  margin-right: auto;
  position: absolute;
  right: 0;
  top: 30%;
  text-align: center;
}

.bet-section img {
  width: 20rem;
}

.chip img {
  height: 1.7rem;
  width: auto;
}

.match-buttons {
  display: flex;
}

.match-buttons div {
  margin-right: 0.5rem;
  margin-left: 0.5rem;
}

p {
  margin-bottom: 0;
}

.row {
  margin: 0;
}

.navbar {
  padding: 1rem;
  z-index: 1;
}

.outside-navbar {
  background-color: rgba(0, 0, 0, 0.6);
  position: absolute;
  width: 100%;
  height: 4rem;
  z-index: 1;
}

.one-card {
  height: 5.625rem;
  margin-left: -3.125rem;
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  width: auto;
}

.player-section,
.dealer-section {
  text-align: center;
}

.dealer-section {
  margin-bottom: 5rem;
}

.player-points,
.dealer-points {
  margin-left: -3.125rem;
}

.money-amount {
  display: flex;
  font-size: 1.5rem;
}

.money-ico,
.chips-ico {
  height: 2.2rem;
  margin-right: 0.5rem;
}

.chip img {
  height: 1.9rem;
}

.bet img {
  height: 2.5rem;
}

.user-money {
  display: flex;
}

.loader {
  height: 0.8rem;
  background-color: yellow;
  width: 100%;
  position: absolute;
  bottom: 0;
}

.game-logo {
  max-width: 20rem;
  /* background-color: brown; */
}

.press-start {
  /* background-color: chocolate; */
  height: 8rem;
}

.press-start-text {
  animation: blink 1.7s linear infinite;
}

@keyframes blink {
  50% {
    opacity: 0;
  }
}

.welcome-container,
.start-game-container {
  background-image: url("../items/hall.png");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  /* background-color: chocolate; */
  height: 100%;
  margin: 0 auto;
  max-width: 50rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  justify-content: center;
}

.playerName {
  background-color: transparent;
  /* background-color: tomato; */
  border-top: 0;
  border-left: 0;
  border-right: 0;
  border-color: antiquewhite;
  border-width: 0.25rem;
  max-width: 70%;
  font-size: calc(1.375rem + 1.5vw);
  color: antiquewhite;
}

.playerName:focus {
  outline: none;
}

.welcome-elements {
  /* background-color: seagreen; */
  height: 22rem;
  display: flex;
  flex-direction: column;
  /* justify-content: space-between; */
  /* text-align: center; */
  align-items: center;
  max-width: 30rem;
}

.continue-button,
.startgame-button {
  background-color: transparent;
  border: none;
  color: antiquewhite;
}

.startgame-button {
  animation: blink 1.7s linear infinite;
}

.continue-button:disabled {
  color: rgba(250, 235, 215, 0.5);
}

